--- a/src/styles.global.css
+++ b/src/styles.global.css
@@ -6,10 +6,22 @@ html {
   padding: 0;
   border: 0;
   font-family: 'Gentium Basic', serif;
-  font-size: 16px;
+  font-size: 14px;
 
   /* We can nest rules, thanks to cssnext */
-  li {
-    font-size: 2rem;
+  .TradesTable {
+
+    table {
+
+      td.md-table-column {
+        font-size: 12px;
+        height: 18px;
+        padding: 8px;
+      }
+    }
+
+    a {
+      text-decoration: none;
+    }
   }
 }
