--- a/src/styles.global.css
+++ b/src/styles.global.css
@@ -2,6 +2,10 @@
 you can import locally, and they wind up in the resulting bundle */
 @import url('https://fonts.googleapis.com/css?family=Gentium+Basic');
 
+body {
+	margin: 0;
+}
+
 html {
   padding: 0;
   border: 0;
