--- a/kit/views/webpack.html
+++ b/kit/views/webpack.html
@@ -5,9 +5,8 @@
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta httpEquiv="Content-Language" content="en" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://unpkg.com/react-md@1.2.3/dist/react-md.pink-amber.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:400,500,700">
-    <title>0xplorer webpack</title>
+    <title>Shrimp Explorer</title>
   </head>
   <body>
     <div id="main"></div>
