--- a/src/styles.global.scss
+++ b/src/styles.global.scss
@@ -19,7 +19,8 @@ html {
   font-family: 'Gentium Basic', serif;
   font-size: 14px;
 
-  .TradesTable {
+  .TradesTable,
+  .NarrowRows {
 
     table {
 
