--- a/kit/views/browser.html
+++ b/kit/views/browser.html
@@ -5,7 +5,8 @@
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta httpEquiv="Content-Language" content="en" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>0xplorer browser</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:400,500,700">
+    <title>Shrimp explorer</title>
   </head>
   <body>
     <div id="main"></div>
