--- a/kit/views/webpack.html
+++ b/kit/views/webpack.html
@@ -6,7 +6,7 @@
     <meta httpEquiv="Content-Language" content="en" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:400,500,700">
-    <title>Shrimp Explorer</title>
+    <title>Shrimp explorer</title>
   </head>
   <body>
     <div id="main"></div>
