silent wallet check, total in 24h cards

--- a/src/styles.global.scss
+++ b/src/styles.global.scss
@@ -29,6 +29,14 @@ html {
         height: 18px;
         padding: 8px;
       }
+
+      .TitleRow {
+
+        td.md-table-column {
+          font-size: 16px;
+          font-weight: 500;
+        }
+      }
     }
 
     a {
