--- a/kit/views/webpack.html
+++ b/kit/views/webpack.html
@@ -6,6 +6,15 @@
     <meta httpEquiv="Content-Language" content="en" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Shrimp explorer</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86122143-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-86122143-2');
+    </script>
   </head>
   <body>
     <div id="main"></div>
