--- a/kit/views/webpack.html
+++ b/kit/views/webpack.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <div id="main"></div>
+    <script defer src="/web3.js"></script>
     <script defer src="/vendor.js"></script>
     <script defer src="/browser.js"></script>
   </body>
