--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -12,6 +12,8 @@
 
 .Wallet {
   display: inline-block;
-  color: $md-blue-grey-800;
-  font-size: 12px;
+  color: $md-grey-200;
+  text-align: right;
+  font-size: 11px;
+  padding-top: 14px;
 }
