Add search component item to navbar

--- a/src/styles.global.scss
+++ b/src/styles.global.scss
@@ -68,7 +68,7 @@ html {
 }
 
 .NavLink {
-  a.md-list-tile { // navbar drawer mini
+  .md-list-tile { // navbar drawer mini
     padding-left: 24px;
   }
 }
