--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -1,3 +1,16 @@
+.AccountSearchForm {
+
+  .address-input {
+    display: inline-block;
+    margin-right: 20px;
+    max-width: 340px;
+  }
+
+  .address-input-btn {
+    margin-bottom: 22px;
+  }
+}
+
 .FlyingMessage {
   display: inline-block;
   font-size: 12px;
@@ -18,6 +31,13 @@
   }
 }
 
+.TradesTable {
+
+  span.inverted {
+    color: $md-secondary-color;
+  }
+}
+
 .Wallet {
   display: inline-block;
   color: $md-grey-200;
@@ -26,18 +46,6 @@
   padding-top: 14px;
 }
 
-.AccountSearchForm {
-
-  .address-input {
-    display: inline-block;
-    margin-right: 20px;
-    max-width: 340px;
-  }
-
-  .address-input-btn {
-    margin-bottom: 22px;
-  }
-}
 
 
 .light-grey {
