Add inline loader for daily token volume

--- a/src/components/common/Loader/inlineLoader.scss
+++ b/src/components/common/Loader/inlineLoader.scss
@@ -1,12 +1,12 @@
 .spinner {
-  margin: 100px auto 0;
-  width: 70px;
+  // margin: 100px auto 0;
+  // width: 70px;
   text-align: center;
 }
 
 .spinner > div {
-  width: 18px;
-  height: 18px;
+  width: 6px;
+  height: 6px;
   background-color: #333;
 
   border-radius: 100%;
